# dash-light

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig
components/freqb/: CMakeLists.txt
components/freqb/include/: freqb.h  freqb_bands.h
components/freqb/src/: freqb.c
linux_host_test/: .gitignore  CMakeLists.txt  pre_test.sh  test_runner.c
linux_host_test/mock/: CMakeLists.txt  mock.c
linux_host_test/mock/headers/: esp_cpu.h  esp_err.h  esp_event.h  esp_event_base.h  esp_idf_version.h  esp_log.h  esp_system.h  nvs.h  nvs_flash.h  sdkconfig.h
linux_host_test/mock/headers/esp32/rom/: ets_sys.h
linux_host_test/mock/headers/freertos/: FreeRTOS.h  event_groups.h  portmacro.h  queue.h  semphr.h  task.h  timers.h
linux_host_test/mock/headers/hal/: i2c_types.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/cmake_linuxtest/: CMakeLists.txt
main/core/: app_core.c  app_core.h  dash_light.c  dash_light.h  fft_buffer.c  fft_buffer.h  fft_task.c  fft_task.h
main/display/: oled.c  oled.h
main/fft/: fft_amplitude.c  fft_amplitude.h  fft_buffer.c  fft_buffer.h  fft_common.c  fft_common.h  fft_task.c  fft_task.h
main/io/: oled.c  oled.h
main/network/: bt_app_av.c  wifi_mqtt.c  wifi_mqtt.h
scripts/: test_freqb_mqtt.py
