idf_component_register(SRCS "network/bt_app_av.c"
                            "core/app_core.c"
                            "fft/fft_common.c"
                            "fft/fft_task.c"
                            "fft/fft_buffer.c"
                            "fft/fft_amplitude.c"
                            "core/dash_light.c"
                            "main.c"
                    INCLUDE_DIRS ".")
